--- a/action.yml
+++ b/action.yml
@@ -12,9 +12,9 @@ inputs:
     description: API Key to use to publish blog post to Dev.to website
     required: false    
   publishTo:
-    description: Websites to publish blog post
+    description: Websites to publish blog post. Current allowed values are 'devTo' and 'medium'
     required: true
-    default: 'dev.to,medium.com'
+    default: 'devTo,medium'
   includeFolders:
     description: Folders to look for post files to publish/update. Multiple folders can be speficied, one folder per line
     required: false
