--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,8 @@
 name: Test Markdown Reviewer and Translator
 
+permissions:
+  contents: write
+  
 on:
   workflow_dispatch:
   push:
@@ -21,5 +24,4 @@ jobs:
         with:
           devToApiKey: ${{ secrets.DEV_TO_API_KEY }}
           includeFolders: |-
-            examples
-            post-samples
+            pages/posts
