chore(*): update fetch-depth in checkout workflow command

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
       # you must check out the repository
       - name: Checkout
         uses: actions/checkout@v4
+        # IMPORTANT: Fetch all history for all tags and branches so it can compare commits and get files changed
+        with:
+          fetch-depth: 0
       - name: Test the publish-blog-post action
         uses: ./ # Uses an action in the root directory
         id: publish-blog-post
