--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
   publishTo:
     description: Websites to publish blog post. Current allowed values are 'devTo' and 'medium'
     required: true
-    default: 'devTo,medium'
+    default: 'devTo'
   devToApiKey:
     description: API Key to use to publish blog post to Dev.to website
     required: false    
