--- a/package.json
+++ b/package.json
@@ -59,14 +59,15 @@
     "@commitlint/cli": "~19.7.1",
     "@commitlint/config-conventional": "~19.7.1",
     "@commitlint/cz-commitlint": "~19.6.1",
-    "@eslint/compat": "~1.2.5",
+    "@eslint/compat": "~1.2.6",
     "@eslint/js": "~9.19.0",
     "@types/find": "~0.2.4",
-    "@types/node": "~22.10.7",
+    "@types/node": "~22.13.1",
     "@vercel/ncc": "~0.38.3",
-    "@vitest/coverage-v8": "~2.1.3",
+    "@vitest/coverage-v8": "~3.0.5",
     "commit-and-tag-version": "~12.5.0",
     "commitizen": "~4.3.1",
+    "eslint": "~9.19.0",
     "eslint-config-prettier": "~10.0.1",
     "eslint-plugin-import": "~2.31.0",
     "eslint-plugin-prettier": "~5.2.3",
@@ -74,10 +75,15 @@
     "globals": "~15.14.0",
     "husky": "~9.1.7",
     "lint-staged": "~15.4.3",
-    "prettier": "~3.3.3",
+    "prettier": "~3.4.2",
     "ts-node": "~10.9.2",
     "typescript": "~5.7.3",
     "typescript-eslint": "~8.23.0",
-    "vitest": "~2.1.9"
+    "vitest": "~3.0.5"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
